--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -273,3 +273,38 @@ label {
   margin-bottom: 8px;
   display: block;
 }
+
+.search-outside {
+	position: absolute;
+	  top: 150PX; /* ← ヘッダーの高さに合わせて調整 */
+	  right: 20px;
+	  z-index: 100;
+}
+
+.search-outside form {
+  display: flex;
+  gap: 6px;
+  background-color: #ffffff;
+  padding: 6px 10px;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  border: 1px solid #ddd;
+}
+
+
+.search-outside input[type="text"] {
+  padding: 6px 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.search-outside button {
+  background-color: #C6A57A;
+  color: #fff;
+  border: none;
+  padding: 6px 12px;
+  font-weight: 600;
+  border-radius: 4px;
+  cursor: pointer;
+}
