--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -222,6 +222,7 @@ body {
   gap: 24px;                    /* カード間の隙間 */
   justify-content: center;      /* 中央寄せ（space-between も可） */
   padding: 20px;
+  margin-top: 60px;
 }
 
 .hotel-card {
@@ -251,6 +252,55 @@ body {
     white-space: nowrap;
     color: #ffcf32; /* イエローカラー 自由に設定化 */
 }
+.stersize{
+	font-size: 25px;
+}
+.button-wrapper {
+  display: flex;
+  justify-content: center; /* 横方向中央寄せ */
+  gap: 10px; /* ボタン間のスペース */
+  margin-top: 5px;
+}
+
+.button-wrapper form {
+  margin: 0;
+}
+
+.search-outside {
+	position:absolute;
+	top: 100px;    /* ヘッダーの下あたり */
+	right: 20px;
+	z-index: 1100; /* ヘッダーより上に */
+}
+
+.search-outside form {
+  display: flex;
+  gap: 6px;
+  background-color: #ffffff;
+  padding: 6px 10px;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  border: 1px solid #ddd;
+}
+
+
+.search-outside input[type="text"] {
+  padding: 6px 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.search-outside button {
+  background-color: #C6A57A;
+  color: #fff;
+  border: none;
+  padding: 6px 12px;
+  font-weight: 600;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 
 .star5_rating[data-rate="0.0"]:after { width: 0%; }
 .star5_rating[data-rate="0.1"]:after { width: 2%; }
@@ -303,4 +353,6 @@ body {
 .star5_rating[data-rate="4.8"]:after { width: 96%; }
 .star5_rating[data-rate="4.9"]:after { width: 98%; }
 .star5_rating[data-rate="5.0"]:after { width: 100%; }
+
+
 
