--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -698,7 +698,7 @@ label{
 .icon-button i {
   font-size: 1rem;
 }
-.button-wrapper {
+.button-wrap {
   display: flex;
   justify-content: flex-end; /* 右寄せ */
 }
@@ -711,4 +711,31 @@ label{
 
 .cardTitle:hover{
 	color: #6D5F4E;
+}
+/*TOPへ戻るボタン*/
+.bottomFooter__topBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 15px;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  opacity: 0.6;
+  background: none;
+  color: #333;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.bottomFooter__topBtn::after {
+  content: "\f135";
+  font-family: "FontAwesome";
+  font-size: 2.8rem;
+  display: inline-block;
+  line-height: 60px;
+  transform: rotate(-45deg);
+}
+
+.bottomFooter__topBtn::before {
+  display: none;
 }
