--- a/src/main/webapp/css/review.css
+++ b/src/main/webapp/css/review.css
@@ -3,7 +3,7 @@
 .stars{
 	display: flex;
 	flex-direction: row-reverse; /* 逆順に並べる */
-	justify-content:center;
+	justify-content: center;
 }
 
 .stars input {
@@ -23,6 +23,12 @@
 	color: #ffcf32;
 }
 
+.startext {
+	font-size: 19px;
+	padding-top: 6px;
+	color: #FFF1D0;
+}
+
 .reviewcenter {
   display: flex;
   justify-content: center;
@@ -33,14 +39,32 @@
 
 
 .reviewform {
-  background: #fff;
+  background: #7A6957;
   border-radius: 8px;
   padding: 24px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   width: 100%;
-  max-width: 700px;
+  max-width: 750px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center; 
   gap: 16px;
+}
+
+.commentarea {
+	font-size: 15px;
+	min-width: 45em;
+	max-width: 45em;
+	min-height: 10em;
+	background-color: #FAF6F2;
+}
+
+.reviewbutton {
+	width: 100%;
+	align-items: center;
+	margin-top: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
